Czyszczenie kodu